--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.4.7",
+    "gsap": "^3.12.7",
     "lenis": "^1.2.3",
     "lucide-react": "^0.475.0",
     "next": "14.1.0",
