--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@radix-ui/react-slot": "^1.1.2",
     "@react-three/drei": "^9.80.0",
     "@react-three/fiber": "^8.13.6",
+    "@studio-freight/lenis": "^1.0.42",
     "@types/three": "^0.174.0",
     "@vercel/analytics": "^1.5.0",
     "class-variance-authority": "^0.7.1",
